--- a/public/index.html
+++ b/public/index.html
@@ -1,40 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
-    <!--
-      manifest.json provides metadata used when your web app is added to the
-      homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <title>React Basics</title>
+      <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+      <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+      <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
   </head>
   <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+    <div id ="app"></div>
+    <script type = "text/babel">
+      class App extends React.Component{
+        state = {
+          name: 'yoonju',
+          age: 23
+        }
+        handleClick(e){
+          console.log(e.target);
+        }
+        handleMouseOver(e){
+          console.log(e.target, e.pageX);
+        }
+        handleCopy(e){
+          console.log('Try being original for once');
+        }
+        render(){
+          return(
+            <div className="app-content">
+              <h1>Hey there!</h1>
+              <p>My name is: {this.state.name} and I am {this.state.age}</p>
+              <button onClick={this.handleClick}>Click Me </button>
+              <button onMouseOver={this.handleMouseOver}>Hover Me </button>
+              <p onCopy={this.handleCopy}>What we think, we become</p>
+            </div>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+          )
+        }
+      }
+      ReactDOM.render(<App />, document.getElementById('app'));
+    </script>
   </body>
 </html>
